title of SAP sponsor talk

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <span class='stitle'>Sponsor Talks</span>
                 <ul>
                     <li class='paper'>
-                        <span class='title'>SAP</span>
+                        <span class='title'>Graph and Multi-Model in SAP HANA</span>
                         <span class='authors'>Matthias Hauck</span>
                     </li>
                     <li class='paper'>
