moves 2nd sponsor talk

--- a/index.html
+++ b/index.html
@@ -98,20 +98,17 @@
             </p>
             <div class="separator">Coffee Break (30 mins)</div>
             <p class='session'>
-                <span class='time'>10:30 AM - 11:00 AM</span>
-                <span class='stitle'>Sponsor Talks</span>
+                <span class='time'>10:30 AM - 10:45 AM</span>
+                <span class='stitle'>Sponsor Talk 1</span>
                 <ul>
                     <li class='paper'>
                         <span class='title'>Graph and Multi-Model in SAP HANA</span>
                         <span class='authors'>Matthias Hauck</span>
                     </li>
-                    <li class='paper'>
-                        <span class='title'>Amazon</span>
-                        <span class='authors'>t.b.d.</span>
-                    </li>                </ul>
+                </ul>
             </p>
             <p class='session'>
-                <span class='time'>11:00 AM - 12:00 PM</span>
+                <span class='time'>10:45 AM - 11:45 PM</span>
                 <span class='stitle'>Paper Presentations</span>
                 <ul>
                     <li class='paper'>
@@ -123,6 +120,15 @@
                         <span class='authors'>Diego Arroyuelo, Daniela Campos, Adrián Gómez Brandón, Gonzalo Navarro, Carlos Rojas, and Domagoj Vrgoc</span>
                     </li>
                 </ul>
+            </p>
+            <p class='session'>
+                <span class='time'>11:45 AM - 12:00 PM</span>
+                <span class='stitle'>Sponsor Talk 2</span>
+                <ul>
+                    <li class='paper'>
+                        <span class='title'>Amazon</span>
+                        <span class='authors'>t.b.d.</span>
+                    </li>                </ul>
             </p>
             <div class="separator">Lunch Break (120 mins)</div>
             <p class='session'>
