abstract of invited talk

--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
             <p class='session'>
                 <span class='time'>04:30 PM - 05:30 PM</span>
                 <span class='stitle'>Invited Talk: <em>"PODS Goes Practical: Can Database Theory be of any use for Building Graph Systems?"</em> by Domagoj Vrgoč (Pontificia Universidad Católica de Chile)</span>
+                <span style="display: block; margin-top: 0.5em; font-size: smaller; line-height: 1.4em;"><b>Abstract:</b> In this talk we will present our experience of what it takes to implement core theoretical findings inside of a working graph database engine. To do so, we will present how MillenniumDB, the engine built at IMFD Chile, uses the idea of worst-case optimal algorithms and automata-based path search to efficiently evaluate important classes of graph queries. The presentation will focus on the main challenges that an implementer faces when adapting theoretical work and try to give some insight on how these approaches fit into a classical database architecture, or how to adapt them for alternative storage models. During the presentation we will try to give a wider overview of the class of enumeration algorithms and discuss why these might be a good theoretical framework for algorithms that are implementable and have the potential to perform well in practice.
+                </span>
             </p>
             <div class="separator">End of the workshop at 5:30 PM</div>
 
