Amazon sponsor talk

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <ul>
                     <li class='paper'>
                         <span class='title'>Graph and Multi-Model in SAP HANA</span>
-                        <span class='authors'>Matthias Hauck</span>
+                        <span class='authors'>Matthias Hauck (<strong>SAP SE</strong>)</span>
                     </li>
                 </ul>
             </p>
@@ -126,8 +126,8 @@
                 <span class='stitle'>Sponsor Talk 2</span>
                 <ul>
                     <li class='paper'>
-                        <span class='title'>Amazon</span>
-                        <span class='authors'>t.b.d.</span>
+                        <span class='title'>openCypher over RDF for Neptune Analytics</span>
+                        <span class='authors'>Willem Broekema (<strong>Amazon</strong>)</span>
                     </li>                </ul>
             </p>
             <div class="separator">Lunch Break (120 mins)</div>
