--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="col-full">
             <h2><a id="submission"></a>Paper Submission</h2>
             <p>Authors are invited to submit original, unpublished research papers (full and short), demonstrations and case-studies. </p>
-            <p>Submissions must follow the latest 2-column ACM Proceedings format using the latest <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a>, and have to be anonymous. </p>
+            <p>Submissions must follow the latest 2-column <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a>, and have to be anonymous. </p>
             <p>Reviewing will be double-anonymous, for which the submissions must be anonymized by following the same anonymity requirements as for <a href="https://2025.sigmod.org/calls_papers_sigmod_research.shtml">regular track papers at the SIGMOD 2025 conference</a>. Use the following latex command to compile your paper without author names: <code>\documentclass[sigconf, anonymous, review]{acmart}</code>.</p>
             </p>
             <p>Length Requirements:</p>
