--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <div class="col-full-b">
             <h2>Get in touch</h2>
             <p>
-                For questions, please <a href="mailto:gradesnda2024@easychair.org">email</a>. Follow us on <a href="https://twitter.com/gradesnda">X (formerly Twitter)</a> for latest updates about the workshop.
+                For questions, please <a href="mailto:gradesnda2024@easychair.org">email</a>. Follow us on <a href="https://bsky.app/profile/did:plc:4wn6us7ull5fscsqxedot2yy">BlueSky</a> and <a href="https://twitter.com/gradesnda">X (formerly Twitter)</a> for latest updates about the workshop.
             </p>
         </div>
     </section>
