--- a/index.html
+++ b/index.html
@@ -52,16 +52,14 @@
     <section class="row">
         <div class="col-full">
             <h2>Call for Papers</h2>
-            <p> The goal of GRADES-NDA is to bring together researchers from academia, industry, and government (1) to
-                create a forum for discussing recent advances in (large-scale) graph data management and graph analytics
-                systems, as well as propose and discuss novel methods and techniques towards (2) addressing domain-specific challenges or (3) handling noise in real-world graphs.</p>
-            <p>The workshop will be of interest to researchers in the development of novel data-management applications
-                and systems for large-scale graph analytics. More specifically, the intended audience are, but not
-                limited to, academic and industrial computer scientists interested in databases and data mining, machine
-                learning, data streaming, network science, graph theory, and algorithms. Along with novel research work, we encourage
-                submissions with demonstrations and case studies from real-life experiences in various domains such as
-                Social Networks, Biological Network Data, Marketing and Media, Business Data Analysis, Healthcare Data,
-                Cybersecurity etc.
+            <p> The GRADES-NDA workshop explores the challenges, application areas, and usage scenarios of managing large-scale graph-shaped data.  
+	        It provides a forum for exchanging ideas on mining, querying, and learning from real-world network data, fostering interdisciplinary collaboration, and sharing datasets and benchmarks. 
+	        The workshop highlights technical contributions in graph data management systems, emphasizing practical implementations over isolated techniques.	    
+	    </p>
+            <p> GRADES-NDA brings together researchers from academia, industry, and government to discuss advances in large-scale graph data management and analytics, propose solutions to domain-specific challenges, 
+		and develop techniques for handling noise in real-world graphs. The workshop attracts researchers and practitioners in databases, data mining, machine learning, data streaming, network science, 
+		and graph algorithms. Beyond novel research, GRADES-NDA encourages demonstrations and case studies from real-world applications across diverse domains, including Social Networks, Business Analytics, 
+		Healthcare, and Cybersecurity.
             </p>
             <p>Topics of interest include but are not limited to the following.</p>
             <ul>
