Updating description, topics, and submission guidelines.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/main.css">
 
     <title>GRADES-NDA 2025</title>
+    <style>
+        p {text-align: justify;}
+    </style>
 </head>
 <body>
 
@@ -63,20 +66,20 @@
             </p>
             <p>Topics of interest include but are not limited to the following.</p>
             <ul>
-                <li>Graph query languages, visualization techniques and querying interfaces, and their effective realization</li>
-                <li>Graph platform and parallel platforms,  e.g., Flink/Gelly, Titan, SPARK/GraphX, GraphLab/PowerGraph, Giraph, GraphChi etc.</li>
-                <li>Network data representation, storage, indexing and querying methods.</li>
-                <li>Experiences or techniques for graph specific operations such as traversals or inference/reasoning in the context of large data sets and on the systems that implement those operations.</li>
-                <li>RDF data management and analytics</li>
-                <li>Dynamic Graphs: managing graph updates; graph stream analytics; analyzing evolution and detection of community structures in real-world evolving graphs</li>
-                <li>Mining and machine learning on heterogeneous networks -- knowledge graphs etc.</li>
-                <li>Graph summarization and sampling</li>
-                <li>Game Theory, Social contagion and Information propagation on networks</li>
-                <li>Analytics on dirty, noisy, or uncertain graphs</li>
-                <li>Spatial and temporal graph analytics</li>
-                <li>Analytics on social, biological, retail, marketing, customer care, financial, healthcare, transportation network data sets</li>
-                <li> Descriptions of graph data management use cases and query workloads, and experiences with applying data management technologies in such situations</li>
-                <li>Vision and systems papers describing potential or real applications and benefits of graph management, in particular (but not only) in the age of large language models (LLMs)</li>
+                <li>Graph modeling and processing  &ndash;  advances in representing, visualizing, storing, indexing, querying, and managing graph data.</li>
+                <li>Graph query languages, visualization, and querying interfaces  &ndash;  design, usability, practical implementations, and use cases.</li>
+                <li>Knowledge Graphs  &ndash;  construction, augmentation, reasoning, and neuro-symbolic approaches.</li>
+                <li>GenAI techniques &ndash;  integration of Knowledge Graphs and LLMs for information retrieval, question answering, knowledge inference, and natural language understanding.</li>
+                <li>Graph processing platforms  &ndash;  including Titan, Giraph, GraphChi, SPARK/GraphX, GraphLab/PowerGraph, and others.</li>
+                <li>Human-centric graph processing  &ndash;  interactive approaches for graph data exploration, querying, and analytics.</li>
+                <li>Graph metrics  &ndash;  methods for measuring graph characteristics, e.g., diameter, eigenvalues, triangle counting.</li>
+                <li>Spatial and temporal graph analytics  &ndash;  updates, dynamic graphs, streaming analytics, evolution tracking, point-of-interest recommendation, community structure detection, etc.</li>
+                <li>Graph mining and machine learning  &ndash;  including heterogeneous networks and knowledge graphs.</li>
+                <li>Graph summarization and sampling  &ndash;  efficient methods for large-scale data.</li>
+                <li>Noisy and uncertain graphs  &ndash;  analytics on incomplete, inconsistent, or unreliable data.</li>
+                <li>Network dynamics  &ndash;  game theory, social contagion, and information propagation.</li>
+                <li>Domain-specific graph analytics  &ndash;  applications in social networks, biology, business, finance, healthcare, transportation, etc.</li>
+                <li>Vision and systems papers  &ndash;  potential or real applications of graph management, especially in the era of large language models.</li>
             </ul>
             <br>
             <p> Accepted papers will be published by ACM, indexed by DBLP, and will be available in the ACM DL.</p>
@@ -136,7 +139,7 @@
                 <li>Workshop Date: June 27, 2025</li>
 			</ul>
 			<p></p>
-			<i>All deadlines are 23:59 Hours AoE</i>
+			<i>All deadlines are 23:59 AoE.</i>
             <p></p>
 		</div>
 		<div class="col">
@@ -158,18 +161,20 @@
     <section class="row">
         <div class="col-full">
             <h2><a id="submission"></a>Paper Submission</h2>
-            <p>Authors are invited to submit original, unpublished research papers (full and short), demonstrations and case-studies. </p>
-            <p>Submissions must follow the latest 2-column <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a>, and have to be anonymous. </p>
-            <p>Reviewing will be double-anonymous, for which the submissions must be anonymized by following the same anonymity requirements as for <a href="https://2025.sigmod.org/calls_papers_sigmod_research.shtml">regular track papers at the SIGMOD 2025 conference</a>. Use the following latex command to compile your paper without author names: <code>\documentclass[sigconf, anonymous, review]{acmart}</code>.</p>
+            <p>Authors are invited to submit original, unpublished research papers (full and short), and case-studies. </p>
+            <p>Submissions must follow the latest 2-column <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a> (<a href="https://www.overleaf.com/latex/templates/association-for-computing-machinery-acm-sig-proceedings-template/bmvfhcdnxfty">Overleaf template</a>). </p>
+            <p>Reviewing will be double-anonymous, for which the submissions must be anonymized by following the same anonymity requirements as for <a href="https://2025.sigmod.org/calls_papers_sigmod_research.shtml">regular track papers at the SIGMOD 2025 conference</a>. </p>
+            <p>You can use the following LaTeX command to compile your paper without author names:</p>
+            <p><code>\documentclass[sigconf, anonymous, review]{acmart}</code>.</p>
             </p>
             <p>Length Requirements:</p>
             <ul>
-                <li>Full papers should be a maximum of 8 pages in length, excluding references and appendix.</li>
-                <li>Case studies should be a maximum of 4 pages in length, excluding references and appendix.</li>
-                <li>Short papers and demonstration papers should be a maximum of 4 pages in length, excluding references and appendix.</li>
+                <li>Full papers should be a maximum of 8 pages, excluding references and appendix.</li>
+                <li>Short papers and demonstration papers should be a maximum of 4 pages, excluding references and appendix.</li>
+                <li>Case studies should be a maximum of 4 pages, excluding references and appendix.</li>
             </ul>
-            <p>Submissions that do not follow these requirements will be rejected immediately.</p>
             <br/>
+            <p>Submissions that do not follow these requirements will be desk-rejected.</p>
             <p>Submissions will be handled through Easychair.
             To submit click <a href="https://easychair.org/conferences/?conf=gradesnda2025">here</a>.
             </p>
