Adding SIGMOD logo and BlueSky button

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
 <body>
 
 <header>
-    <!--
-    <div class="photo-grid">
-        <a href="/"><img src="img/sigmod2023-logo.jpg" alt="GRADES-NDA"></a>
-    </div>
-    -->
+   
     
-    <div id="logo-container">
-        <div id="logo"><a href="/"><img src="img/grades_nda_v3_twitter.png" alt="Example photo"></a></div>
+    
+    <div>
+        <a href="/"><img src="img/grades_nda_v3_twitter.png" alt="Example photo" style="width:13%; margin-right: 1em;"></a>
+        <a href="/"><img src="img/logo-berlin.jpg" alt="GRADES-NDA" style="width:80%"></a>
     </div>
     <div id="title-container">8th Joint Workshop on Graph Data Management
         Experiences &amp; Systems (GRADES) and Network Data Analytics (NDA)
     </div>
     <div id="subtitle-container"> Co-located with <a href="https://2024.sigmod.org/"> SIGMOD/PODS 2025 </a> (June 27, 2025, Berlin, Germany)
     </div>
+    <br/>&nbsp;
     <div>
-        <a href="https://twitter.com/gradesnda?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @gradesnda</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a href="https://bsky.app/profile/grades-nda.bsky.social"><img src="img/logo-bluesky.png" alt="BlueSky logo" width="28" height="28"> Follow @grades-nda.bsky.social</a>
+        <!-- <a href="https://twitter.com/gradesnda?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @gradesnda</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
     </div>
     <nav>
         <ul>
