updates to sponsors

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
     <section class="row">
         <div class="col-full">
-            <h2 id="sponsors">Sponsored by (in flux)</h2>
+            <h2 id="sponsors">Sponsored by (more to be confirmed)</h2>
             <div class="photo-grid">
 <!--                 <a href="https://neo4j.com/" class="col-3"><img src="img/neo4j-logo.png" alt="Neo4j"></a> -->
                 <a href="https://www.amazon.com/" class="col-4"><img src="img/amazon-logo.png" alt="Amazon" width="200"></a>
