--- a/index.html
+++ b/index.html
@@ -66,14 +66,13 @@
     <section class="row">
         <div class="col-full">
             <h2>Call for Papers</h2>
-            <p> The GRADES-NDA workshop explores the challenges, application areas, and usage scenarios of managing large-scale graph-shaped data.  
+            <p> The GRADES-NDA workshop explores the challenges, application areas, and usage scenarios of managing large-scale graphs.  
 	        It provides a forum for exchanging ideas on mining, querying, and learning from real-world network data, fostering interdisciplinary collaboration, and sharing datasets and benchmarks. 
 	        The workshop highlights technical contributions in graph data management systems, emphasizing practical implementations over isolated techniques.	    
 	    </p>
-            <p> GRADES-NDA brings together researchers from academia, industry, and government to discuss advances in large-scale graph data management and analytics, propose solutions to domain-specific challenges, 
-		and develop techniques for handling noise in real-world graphs. The workshop attracts researchers and practitioners in databases, data mining, machine learning, data streaming, network science, 
-		and graph algorithms. Beyond novel research, GRADES-NDA encourages demonstrations and case studies from real-world applications across diverse domains, including Social Networks, Business Analytics, 
-		Healthcare, and Cybersecurity.
+            <p> GRADES-NDA brings together researchers from academia, industry, and government to discuss advances in large-scale graph data management and analytics. 
+                The workshop explores domain-specific challenges, noise handling in real-world graphs, and innovations in databases, data mining, machine learning, data streaming, 
+                network science, and graph algorithms. It also welcomes case studies across diverse area, including Social Networks, Business Analytics, Healthcare, and Cybersecurity.
             </p>
             <p>Topics of interest include but are not limited to the following.</p>
             <ul>
