--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
 	        It provides a forum for exchanging ideas on mining, querying, and learning from real-world network data, fostering interdisciplinary collaboration, and sharing datasets and benchmarks. 
 	        The workshop highlights technical contributions in graph data management systems, emphasizing practical implementations over isolated techniques.	    
 	    </p>
-            <p> GRADES-NDA brings together researchers from academia, industry, and government to discuss advances in large-scale graph data management and analytics. 
-                The workshop explores domain-specific challenges, noise handling in real-world graphs, and innovations in databases, data mining, machine learning, data streaming, 
-                network science, and graph algorithms. It also welcomes case studies across diverse area, including Social Networks, Business Analytics, Healthcare, and Cybersecurity.
+            <p> GRADES-NDA brings together researchers from academia, industry, and government to discuss advances in large-scale graph data management and analytics. Among the explored topics are 
+                domain-specific challenges, noise handling in real-world graphs, and innovations in databases, data mining, machine learning, data streaming, 
+                network science, and graph algorithms. Case studies across diverse area are welcome, including Social Networks, Business Analytics, Healthcare, 
+                and Cybersecurity.
             </p>
             <p>Topics of interest include but are not limited to the following.</p>
             <ul>
