--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h2>Call for Papers</h2>
             <p> The GRADES-NDA workshop explores the challenges, application areas, and usage scenarios of managing large-scale graphs.  
 	        It provides a forum for exchanging ideas on mining, querying, and learning from real-world network data, fostering interdisciplinary collaboration, and sharing datasets and benchmarks. 
-	        The workshop highlights technical contributions in graph data management systems, emphasizing practical implementations over isolated techniques.	    
+	    <!--    The workshop highlights technical contributions in graph data management systems, emphasizing practical implementations over isolated techniques.	 -->   
 	    </p>
             <p> GRADES-NDA brings together researchers from academia, industry, and government to discuss advances in large-scale graph data management and analytics. Among the explored topics are 
                 domain-specific challenges, noise handling in real-world graphs, and innovations in databases, data mining, machine learning, data streaming, 
