--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 <li>GenAI techniques &ndash;  integration of Knowledge Graphs and LLMs for information retrieval, question answering, knowledge inference, and natural language understanding.</li>
                 <li>Graph processing platforms  &ndash;  including Titan, Giraph, GraphChi, SPARK/GraphX, GraphLab/PowerGraph, and others.</li>
                 <li>Human-centric graph processing  &ndash;  interactive approaches for graph data exploration, querying, and analytics.</li>
+                <li>Reliable graph data processing &ndash; validation and verification techniques for ensuring the trustworthiness of algorithms, query languages, applications, and systems.</li>
                 <li>Graph metrics  &ndash;  methods for measuring graph characteristics, e.g., diameter, eigenvalues, triangle counting.</li>
                 <li>Spatial and temporal graph analytics  &ndash;  updates, dynamic graphs, streaming analytics, evolution tracking, point-of-interest recommendation, community structure detection, etc.</li>
                 <li>Graph mining and machine learning  &ndash;  including heterogeneous networks and knowledge graphs.</li>
