--- a/index.html
+++ b/index.html
@@ -173,19 +173,28 @@
     <section class="row">
         <div class="col-full">
             <h2><a id="submission"></a>Paper Submission</h2>
-            <p>Authors are invited to submit original, unpublished research papers (full and short), and case-studies. </p>
+            <p>Authors are invited to submit original, unpublished research papers in the following categories: </p>
+            <ul>
+                <li><b>Archival</b> : Accepted papers under this category will be published by the ACM, indexed by DBLP, and will be available in the ACM DL.</li>
+            <ul>
+                <li>Full papers should be a maximum of 8 pages, excluding references and appendix.</li>
+                <li>Short papers and demonstration papers should be a maximum of 4 pages, excluding references and appendix.</li>
+                <li>Case studies should be a maximum of 4 pages, excluding references and appendix.</li>
+            </ul> </br>
+
+                <li>🆕 <b>Non-archival</b> : Accepted papers under this category will not be published in the proceedings, but will be listed on the website.</li>
+                <ul>
+                <li>Papers that are suitable for this category are work-in-progress papers presenting early results.</br>
+                    These papers should be a maximum of 4 pages in length, excluding references and appendix.</li>
+                </ul>       
+            </ul> </br>
+
             <p>Submissions must follow the latest 2-column <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a> (<a href="https://www.overleaf.com/latex/templates/association-for-computing-machinery-acm-sig-proceedings-template/bmvfhcdnxfty">Overleaf template</a>). </p>
             <p>Reviewing will be double-anonymous, for which the submissions must be anonymized by following the same anonymity requirements as for <a href="https://2025.sigmod.org/calls_papers_sigmod_research.shtml">regular track papers at the SIGMOD 2025 conference</a>. </p>
             <p>You can use the following LaTeX command to compile your paper without author names:</p>
             <p><code>\documentclass[sigconf, anonymous, review]{acmart}</code>.</p>
             </p>
-            <p>Length Requirements:</p>
-            <ul>
-                <li>Full papers should be a maximum of 8 pages, excluding references and appendix.</li>
-                <li>Short papers and demonstration papers should be a maximum of 4 pages, excluding references and appendix.</li>
-                <li>Case studies should be a maximum of 4 pages, excluding references and appendix.</li>
-            </ul>
-            <br/>
+
             <p>Submissions that do not follow these requirements will be desk-rejected.</p>
             <p>Submissions will be handled through Easychair.
             To submit click <a href="https://easychair.org/conferences/?conf=gradesnda2025">here</a>.
@@ -256,7 +265,7 @@
 
     <section class="row">
         <h2 id="previous">Past Workshops</h2>
-        <p>GRADES-NDA is in its eigth edition, and had successful joint meetings co-located with ACM SIGMOD/PODS from 2018 to 2024. Specifically, it is the merger of the GRADES and NDA workshops, which were each independently organized and successfully held at previous ACM SIGMOD/PODS conferences, GRADES since 2013 and NDA since 2017. The organizers of GRADES and NDA mutually agreed upon to aim for a joint meeting from 2018 onwards.</p>
+        <p>GRADES-NDA is in its eigth edition, and had successful joint meetings co-located with ACM SIGMOD/PODS from 2018 to 2024. Specifically, it is the merger of the GRADES and NDA workshops, which were each independently organized and successfully held at previous ACM SIGMOD/PODS conferences, GRADES since 2013 and NDA since 2017. The organizers of GRADES and NDA mutually agreed upon to aim for a joint meeting from 2018 onwards.</p></br>
         <div class="col" style="width:30%">
             <h2>GRADES-NDA</h2>
             <ul>
