--- a/index.html
+++ b/index.html
@@ -206,39 +206,39 @@
         <div class="col-full">
             <h2><a id="pc"></a>Program Committee</h2>
             <ul>
-<li> Shubhangi Agarwal, University Lyon 1, France </li> 
-<li>  Renzo Angles, Universidad de Talca, Chile </li> 
-<li>  Amitabha Bagchi, Indian Institute of Technology, India </li> 
-<li>  Srikanta Bedathur, Indian Institute of Technology, India </li> 
-<li>  Kaustubh Beedkar, Indian Institute of Technology, India </li> 
-<li>  Yang Cao, University of Edinburgh, UK </li> 
-<li>  James Clarkson, Neo4j, USA </li> 
-<li>  Lisa Ehrlinger, Hasso-Plattner-Institut, Germany </li> 	 
-<li>  Lorena Etcheverry, Universidad de la República, Uruguay </li> 
-<li>  Amélie Gheerbrant, Université de Paris, IRIF, CNRS, France </li> 
-<li>  Paul Groth, University of Amsterdam, Netherlands </li> 
+<li> Shubhangi Agarwal, University Lyon 1 🇫🇷 </li> 
+<li>  Renzo Angles, Universidad de Talca 🇨🇱 </li> 
+<li>  Amitabha Bagchi, Indian Institute of Technology 🇮🇳 </li> 
+<li>  Srikanta Bedathur, Indian Institute of Technology 🇮🇳 </li> 
+<li>  Kaustubh Beedkar, Indian Institute of Technology 🇮🇳 </li> 
+<li>  Yang Cao, University of Edinburgh 🇬🇧 </li> 
+<li>  James Clarkson, Neo4j 🇺🇸 </li> 
+<li>  Lisa Ehrlinger, Hasso-Plattner-Institut 🇩🇪 </li> 	 
+<li>  Lorena Etcheverry, Universidad de la República 🇺🇾 </li> 
+<li>  Amélie Gheerbrant, Université de Paris, IRIF, CNRS 🇫🇷 </li> 
+<li>  Paul Groth, University of Amsterdam 🇳🇱 </li> 
 <li>  Jan Hidders, Birkbeck College, University of London, UK </li> 
-<li>  Panagiotis Karras, University of Copenhagen, Denmark </li> 
-<li>  Haridimos Kondylakis, ICS-FORTH, Greece </li> 
-<li>  Longbin Lai, Alibaba Group, China </li> 
-<li>  Ioana Manolescu, INRIA, Institut Polytechnique de Paris, France </li> 
-<li>  Victor Marsault, Université Gustave Eiffel, CNRS, LIGM, France </li> 
-<li>  Andrea Mauri, University of Lyon 1, CNRS, LIRIS, France </li> 
-<li>  Amine Mhedhbi, École Polytechnique de Montréal, Canada </li> 
-<li>  Davide Mottin, Aarhus University, Denmark </li> 
-<li>  Serafeim Papadias, TU Berlin, Germany </li> 
-<li>  Marcus Paradies, Ludwig-Maximilians-Universität München,  Germany </li> 
-<li>  Liat Peterfreund, Hebrew University, RelationalAI, Israel </li> 
-<li>  Evaggelia Pitoura, University of Ioannina, Greece </li> 
-<li>  Yuya Sasaki, Osaka University, Japan </li> 
-<li>  Semih Salihoglu, University of Waterloo, Kùzu, Canada </li> 
-<li>  Petra Selmer, Bloomberg, UK </li> 
-<li>  Dominik Tomaszuk, University of Bialystok, Poland </li> 
-<li>  Riccardo Tommasini, INSA Lyon, CNRS, LIRIS, France </li> 
-<li>  Georgia Troullinou, Université Grenoble Alpes, France </li> 
-<li>  Ana Lucia Varbanescu, University of Amsterdam, Netherlands </li> 
-<li>  Genoveva Vargas-Solar, CNRS, LIRIS, France </li> 
-<li>  Nikolay Yakovets, Eindhoven University of Technology, Netherlands </li> 
+<li>  Panagiotis Karras, University of Copenhagen 🇩🇰 </li> 
+<li>  Haridimos Kondylakis, ICS-FORTH 🇬🇷 </li> 
+<li>  Longbin Lai, Alibaba Group 🇨🇳 </li> 
+<li>  Ioana Manolescu, INRIA, Institut Polytechnique de Paris 🇫🇷 </li> 
+<li>  Victor Marsault, Université Gustave Eiffel, CNRS, LIGM 🇫🇷 </li> 
+<li>  Andrea Mauri, University of Lyon 1, CNRS, LIRIS 🇫🇷 </li> 
+<li>  Amine Mhedhbi, École Polytechnique de Montréal 🇨🇦 </li> 
+<li>  Davide Mottin, Aarhus University 🇩🇰 </li> 
+<li>  Serafeim Papadias, TU Berlin 🇩🇪 </li> 
+<li>  Marcus Paradies, Ludwig-Maximilians-Universität München 🇩🇪 </li> 
+<li>  Liat Peterfreund, Hebrew University, RelationalAI 🇮🇱 </li> 
+<li>  Evaggelia Pitoura, University of Ioannina 🇬🇷 </li> 
+<li>  Yuya Sasaki, Osaka University 🇯🇵 </li> 
+<li>  Semih Salihoglu, University of Waterloo, Kùzu 🇨🇦 </li> 
+<li>  Petra Selmer, Bloomberg 🇬🇧 </li> 
+<li>  Dominik Tomaszuk, University of Bialystok 🇵🇱 </li> 
+<li>  Riccardo Tommasini, INSA Lyon, CNRS, LIRIS 🇫🇷 </li> 
+<li>  Georgia Troullinou, Université Grenoble Alpes 🇫🇷 </li> 
+<li>  Ana Lucia Varbanescu, University of Amsterdam 🇳🇱 </li> 
+<li>  Genoveva Vargas-Solar, CNRS, LIRIS 🇫🇷 </li> 
+<li>  Nikolay Yakovets, Eindhoven University of Technology 🇳🇱 </li> 
        </ul>
         </div>
     </section>
