--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
 <li>  James Clarkson, Neo4j, USA </li> 
 <li>  Lisa Ehrlinger, Hasso-Plattner-Institut, Germany </li> 	 
 <li>  Lorena Etcheverry, Universidad de la República, Uruguay </li> 
+<li>  Sainyam Galhotra, Cornell University, USA </li>
 <li>  Amélie Gheerbrant, Université de Paris, IRIF, CNRS, France </li> 
 <li>  Paul Groth, University of Amsterdam, Netherlands </li> 
 <li>  Jan Hidders, Birkbeck College, University of London, UK </li> 
