--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 		<div class="col">
 			<h2>Workshop Organizers</h2>
 			<ul>
-                <li><a href="https://dlab.epfl.ch/people/aarora/">Akhil Arora</a>, Aarhus University &amp; Copenhagen Center for Social Data Sience, Denmark</li>
+                <li><a href="https://dlab.epfl.ch/people/aarora/">Akhil Arora</a>, Aarhus University &amp; Copenhagen Center for Social Data Science, Denmark</li>
                 <li><a href="https://web4.ensiie.fr/~stefania.dumbrava">Stefania Dumbrava</a>, ENSIIE &amp; Télécom SudParis, France</li>
 			</ul><br>
 			<h2>Steering Committee</h2>
