--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div class="col-full">
             <h2><a id="pc"></a>Program Committee (in progress)</h2>
             <ul>
-<li> Shubhangi Agarwal, University Lyon 1, France </li> 
+<li> Shubhangi Agarwal, Université Lyon 1, France </li> 
 <li>  Renzo Angles, Universidad de Talca, Chile </li> 
 <li>  Amitabha Bagchi, Indian Institute of Technology, India </li> 
 <li>  Srikanta Bedathur, Indian Institute of Technology, India </li> 
@@ -224,7 +224,7 @@
 <li>  Longbin Lai, Alibaba Group, China </li> 
 <li>  Ioana Manolescu, INRIA, Institut Polytechnique de Paris, France </li> 
 <li>  Victor Marsault, Université Gustave Eiffel, CNRS, LIGM, France </li> 
-<li>  Andrea Mauri, University of Lyon 1, CNRS, LIRIS, France </li> 
+<li>  Andrea Mauri, Université Lyon 1, CNRS, LIRIS, France </li> 
 <li>  Amine Mhedhbi, École Polytechnique de Montréal, Canada </li> 
 <li>  Davide Mottin, Aarhus University, Denmark </li> 
 <li>  Serafeim Papadias, TU Berlin, Germany </li> 
@@ -238,7 +238,7 @@
 <li>  Riccardo Tommasini, INSA Lyon, CNRS, LIRIS, France </li> 
 <li>  Georgia Troullinou, Université Grenoble Alpes, France </li> 
 <li>  Ana Lucia Varbanescu, University of Amsterdam, Netherlands </li> 
-<li>  Genoveva Vargas-Solar, CNRS, LIRIS, France </li> 
+<li>  Genoveva Vargas-Solar, CNRS, Université Lyon 1, LIRIS, France </li> 
 <li>  Nikolay Yakovets, Eindhoven University of Technology, Netherlands </li> 
 
        </ul>
