--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 			</ul><br>
 			<h2>Steering Committee</h2>
 			<ul>
-                <li><a href="http://olafhartig.de/">Olaf Hartig</a>, Amazon Web Services &amp; Link&ouml;ping University, Sweden</li>
-                <li><a href="https://cs.uwaterloo.ca/~ssalihog/">Semih Salihoglu</a>, University of Waterloo, Canada</li>
+                <li><a href="http://olafhartig.de/">Olaf Hartig</a>, Amazon Web Services (AWS) &amp; Link&ouml;ping University, Sweden</li>
+                <li><a href="https://cs.uwaterloo.ca/~ssalihog/">Semih Salihoglu</a>, University of Waterloo &amp; Kùzu, Canada</li>
 				<li><a href="https://cs-people.bu.edu/vkalavri/">Vasiliki Kalavri</a>, Boston University, US</li>
                 <li><a href="https://www.tue.nl/en/research/researchers/george-fletcher/">George Fletcher</a>, TU Eindhoven, The Netherlands</li>
 			</ul>
@@ -217,7 +217,7 @@
 <li>  Lorena Etcheverry, Universidad de la República, Uruguay </li> 
 <li>  Sainyam Galhotra, Cornell University, USA </li>
 <li>  Amélie Gheerbrant, Université de Paris, IRIF, CNRS, France </li> 
-<li>  Paul Groth, University of Amsterdam, Netherlands </li> 
+<li>  Paul Groth, University of Amsterdam, The Netherlands </li> 
 <li>  Jan Hidders, Birkbeck College, University of London, UK </li> 
 <li>  Panagiotis Karras, University of Copenhagen, Denmark </li> 
 <li>  Haridimos Kondylakis, ICS-FORTH, Greece </li> 
@@ -228,7 +228,7 @@
 <li>  Amine Mhedhbi, École Polytechnique de Montréal, Canada </li> 
 <li>  Davide Mottin, Aarhus University, Denmark </li> 
 <li>  Serafeim Papadias, TU Berlin, Germany </li> 
-<li>  Marcus Paradies, Ludwig-Maximilians-Universität München,  Germany </li> 
+<li>  Marcus Paradies, Ludwig-Maximilians-Universität München, Germany </li> 
 <li>  Liat Peterfreund, Hebrew University, RelationalAI, Israel </li> 
 <li>  Evaggelia Pitoura, University of Ioannina, Greece </li> 
 <li>  Yuya Sasaki, Osaka University, Japan </li> 
@@ -237,9 +237,9 @@
 <li>  Dominik Tomaszuk, University of Bialystok, Poland </li> 
 <li>  Riccardo Tommasini, INSA Lyon, CNRS, LIRIS, France </li> 
 <li>  Georgia Troullinou, Université Grenoble Alpes, France </li> 
-<li>  Ana Lucia Varbanescu, University of Amsterdam, Netherlands </li> 
+<li>  Ana Lucia Varbanescu, University of Amsterdam, The Netherlands </li> 
 <li>  Genoveva Vargas-Solar, CNRS, Université Lyon 1, LIRIS, France </li> 
-<li>  Nikolay Yakovets, Eindhoven University of Technology, Netherlands </li> 
+<li>  Nikolay Yakovets, Eindhoven University of Technology, The Netherlands </li> 
 
        </ul>
         </div>
